Add Firefox support

--- a/app/views/dives/edit.erb
+++ b/app/views/dives/edit.erb
@@ -13,7 +13,7 @@
         <input class="triple_column_inputs not_first" type="integer" name="dive[length]" placeholder="Length(mins)" value="<%=@dive.length%>">
       </div>
       <div class="row">
-        <textarea rows="5" class="triple_column_inputs" name="dive[notes]" placeholder="Your dive notes"><%=@dive.notes%></textarea>
+        <textarea rows="5" class="single_column_inputs" name="dive[notes]" placeholder="Your dive notes"><%=@dive.notes%></textarea>
       </div>
 
 
