--- a/app/views/divesites/new.erb
+++ b/app/views/divesites/new.erb
@@ -6,11 +6,11 @@
 
     <form action="/divesites" method="post">
       <div class="row">
-        <input class="triple_column_inputs" type="text" name="divesite[name]" placeholder="Divesite name">
+        <input class="single_column_inputs" type="text" name="divesite[name]" placeholder="Divesite name">
       </div>
       <div class="row">
-        <input class="triple_column_inputs not_first" type="text" name="divesite[location]" placeholder="Location">
-        <input class="triple_column_inputs not_first" type="text" name="divesite[country]" placeholder="Country">
+        <input class="dual_column_inputs" type="text" name="divesite[location]" placeholder="Location">
+        <input class="dual_column_inputs not_first" type="text" name="divesite[country]" placeholder="Country">
       </div>
 
       <br></br>
@@ -30,7 +30,7 @@ If so, here's the place to do it!</p></pre>
       </div>
 
       <div class="row">
-        <textarea rows="5" class="triple_column_inputs" name="dive[notes]" placeholder="Your dive notes"></textarea>
+        <textarea rows="5" class="single_column_inputs" name="dive[notes]" placeholder="Your dive notes"></textarea>
       </div>
 
       <br></br>
@@ -43,7 +43,7 @@ If so, here's the place to do it!</p></pre>
       </div>
 
       <br></br>
-      
+
     </form>
 
 
