--- a/app/views/dives/new.erb
+++ b/app/views/dives/new.erb
@@ -14,7 +14,7 @@
         <input class="triple_column_inputs not_first" type="integer" name="dive[length]" placeholder="Length(mins)">
       </div>
       <div class="row">
-        <textarea rows="5" class="triple_column_inputs" name="dive[notes]" placeholder="Your dive notes"></textarea>
+        <textarea rows="5" class="single_column_inputs" name="dive[notes]" placeholder="Your dive notes"></textarea>
       </div>
 
 
