--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -7,12 +7,12 @@
     <form action="/users/<%=@user.slug%>" method="post">
       <input type="hidden" name="_method" value="patch">
       <div class="row">
-        <input class="triple_column_inputs" type="text" name="first_name" value="<%=@user.first_name%>">
-        <input class="triple_column_inputs not_first" type="text" name="last_name" value="<%=@user.last_name%>">
+        <input class="dual_column_inputs" type="text" name="first_name" value="<%=@user.first_name%>">
+        <input class="dual_column_inputs not_first" type="text" name="last_name" value="<%=@user.last_name%>">
       </div>
       <div class="row">
-        <input class="triple_column_inputs" type="text" name="username" value="<%=@user.username%>" pattern="^\S*$" title="No spaces please! how about a hypen or underscore instead?">
-        <input class="triple_column_inputs not_first" type="text" name="email" value="<%=@user.email%>" pattern="^\S*@\S*\.\S*$" title="Please enter a valid email">
+        <input class="dual_column_inputs" type="text" name="username" value="<%=@user.username%>" pattern="^\S*$" title="No spaces please! how about a hypen or underscore instead?">
+        <input class="dual_column_inputs not_first" type="text" name="email" value="<%=@user.email%>" pattern="^\S*@\S*\.\S*$" title="Please enter a valid email">
       </div>
 
       <br></br>
@@ -23,8 +23,8 @@
 please do so here, otherwise leave blank!</p></pre>
 
       <div class="row">
-        <input class="triple_column_inputs" type="password" name="new_password" placeholder="New Password">
-        <input class="triple_column_inputs not_first" type="password" name="password_confirmation" placeholder="Confirm Password">
+        <input class="dual_column_inputs" type="password" name="new_password" placeholder="New Password">
+        <input class="dual_column_inputs not_first" type="password" name="password_confirmation" placeholder="Confirm Password">
       </div>
 
       <br></br>
@@ -34,8 +34,8 @@ please do so here, otherwise leave blank!</p></pre>
 Please confirm your current password to update any changes:
 </pre>
 
-      <input class="triple_column_inputs" type="password" name="password" placeholder="Your Current Password">
-      <input class="triple_column_inputs not_first" type="submit" value="Update Details">
+      <input class="dual_column_inputs" type="password" name="password" placeholder="Your Current Password">
+      <input class="dual_column_inputs not_first" type="submit" value="Update Details">
 
     </form>
 
