Add personalised user photo feature

--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -16,7 +16,17 @@
       </div>
 
       <br></br>
-      <br></br>
+
+<pre>
+<p class="center-text">If you would like to update your profile photo,
+please paste the link to your image here.
+Must be a valid jpg, png or gif file!</p></pre>
+
+            <div class="row">
+              <input class="single_column_inputs" type="text" name="image_url" placeholder="Image URL">
+            </div>
+
+            <br></br>
 
 <pre>
 <p class="center-text">If you would like to change your password
@@ -27,7 +37,6 @@ please do so here, otherwise leave blank!</p></pre>
         <input class="dual_column_inputs not_first" type="password" name="password_confirmation" placeholder="Confirm Password">
       </div>
 
-      <br></br>
       <br></br>
 
 <pre>
