--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,13 +2,13 @@
 
   <div class="center_wrapper">
 
-    <!-- <p class="outside_titles">Welcome to the</p> -->
+    <p class="outside_titles">Welcome to the</p>
     <h1 class="outside_logo">GROTTO...</h1>
 
-    <!-- <div class="row">
+    <div class="row">
       <a class="dual_column_links" href="/signup">Register</a>
       <a class="dual_column_links not_first" href="/login">Login</a>
-    </div> -->
+    </div>
 
   </div>
 </div>
