--- a/app/views/dives/index.erb
+++ b/app/views/dives/index.erb
@@ -16,10 +16,13 @@
     <hr>
 
     <%@dives.reverse.each do |dive| %>
-      <pre>   <strong><a href="/divelogs/<%=dive.user.slug%>"><%=dive.user.username%></a></strong>
-      <%=dive.date%> :: <a href="/<%=dive.user.slug%>/<%=dive.divesite.slug%>/<%=dive.slug%>">See dive</a>
-      <a href="/divesites/<%=dive.divesite.slug%>"><%=dive.divesite.name.titleize%></a>, <%=dive.divesite.location.titleize%>, <%=dive.divesite.country.titleize%>
-      </pre>
+      <div class="row">
+        <pre>   <strong><a href="/divelogs/<%=dive.user.slug%>"><%=dive.user.username%></a></strong>
+        <div class="img-wrapper"><img class="divefeed-img circle" src="<%=dive.user.image_url%>" alt="diver"></div>
+  <%=dive.date%> :: <a href="/<%=dive.user.slug%>/<%=dive.divesite.slug%>/<%=dive.slug%>">See dive</a>
+  <a href="/divesites/<%=dive.divesite.slug%>"><%=dive.divesite.name.titleize%></a>, <%=dive.divesite.location.titleize%>, <%=dive.divesite.country.titleize%>
+        </pre>
+      </div>
       <hr>
     <%end%>
 
