--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -23,7 +23,7 @@ please paste the link to your image here.
 Must be a valid jpg, png or gif file!</p></pre>
 
             <div class="row">
-              <input class="single_column_inputs" type="text" name="image_url" placeholder="Image URL">
+              <input class="single_column_inputs" type="text" name="image_url" value="<%=@user.image_url%>" placeholder="Image URL - leave blank for default">
             </div>
 
             <br></br>
